[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[[test]]
name = "test_target"
path = "tests/04-call-build.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
quote = "1.0.33"
syn = {version="2.0.29", features=["derive", "extra-traits", "full"]}
# TODO
